--- a/find-parking-spaces/src/index.less
+++ b/find-parking-spaces/src/index.less
@@ -1,4 +1,7 @@
+@unit: 375/10rem;
+
 body {
+  font-size: 12/@unit;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
